--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,19 @@ services:
   db:
     image: postgres
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
+    ports:
+      - "5434:5432"
     environment:
       - POSTGRES_DB=pgdb
       - POSTGRES_USER=pguser
       - POSTGRES_PASSWORD=pguser
   app:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      bash -c "
+        python manage.py migrate
+        && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
